--- a/src/glossario.tex
+++ b/src/glossario.tex
@@ -84,7 +84,7 @@
 \newglossaryentry{prov}
 {
     name=\glslink{prov}{Provisioning},
-    text=Provisioning,
+    text=provisioning,
     sort=provisioning,
     description={Con il termine \textit{provisioning} si intende, generalmente, la gestione degli utenti. Questo termine include un insieme di funzionalità riassunte dall'acronimo \gls{crudg}}
 }
