--- a/src/inizio-fine/sommario.tex
+++ b/src/inizio-fine/sommario.tex
@@ -17,8 +17,8 @@
 
 Il presente documento descrive il lavoro svolto durante il periodo di stage, della durata di 304 ore, dal laureando Francesco De Filippis presso l'azienda Zextras S.r.l di Torri di Quartesolo (VI).
 Gli obiettivi da raggiungere erano molteplici.\\
-La prima funzionalità richiesta dall'azienda era l'autenticazione di un utente presente su \gls{zcsg} attraverso l'\gls{idpg} \gls{okta}, il quale supporta il protocollo \gls{samlg}.
-Oltre all'autenticazione per gli utenti già esistenti su \gls{zcsg} era richiesto anche il \gls{prov}. In particolare si trattava di creare un nuovo account su \gls{zcsg} al primo tentativo di login dell'utente con conseguente autenticazione. I dati per la creazione dell'utente venivano forniti da \gls{okta} attraverso una \gls{samlass}. Utilizzando questi dati era richiesta la configurazione dell'account creato.\\
+La prima funzionalità richiesta dall'azienda era l'autenticazione di un utente presente su \gls{zcsg} attraverso l'\textit{\gls{idpg}} \gls{okta}, il quale supporta il protocollo \textit{\gls{saml}}.
+Oltre all'autenticazione per gli utenti già esistenti su \gls{zcsg} era richiesto anche il \textit{\gls{prov}}. In particolare si trattava di creare un nuovo \textit{account} su \gls{zcsg} al primo tentativo di \textit{login} dell'utente, con conseguente autenticazione. I dati per la creazione dell'utente venivano forniti da \gls{okta} attraverso una \textit{\gls{samlass}}. Utilizzando questi dati era richiesta la configurazione dell'account creato.\\
 Il documento è così suddiviso:
 \begin{itemize}
     \item \hyperref[cap:azienda]{Il primo capitolo} descrive l'azienda presso cui ho svolto lo stage. In particolare viene illustrata la sua storia, i suoi prodotti e il modo in cui opera;
